--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -518,7 +518,7 @@
 		flex-direction column
 	
 	.form__field
-		margin-bottom 15px
+		margin-bottom 19px
 		
 	.form__input
 		border 2px solid #e1e1e1
@@ -526,12 +526,16 @@
 		height 50px
 		
 	.form__submit
+		margin-top 2px
 		width auto
 		height 50px
 		text-indent 0
 		border-radius 4px
 		box-shadow 0 4px 8px rgba(38, 138, 225, 0.15)
+		background #268AE1
 		
+		&:hover
+			background darken(#268AE1, 10)
 
 .form_filter
 	flex-direction column
