--- a/app/blocks/news/news.jade
+++ b/app/blocks/news/news.jade
@@ -13,7 +13,7 @@ mixin news()
 					.article__inner
 
 						figure.article__image
-							img(src="assets/images/content/news-1.jpg", alt="")
+							img(src="assets/images/content/placeholder-news.png", alt="")
 						.article__w
 							h3.article__title Выиграй 2,5 тонны топлива Continental!
 							.article__text При покупке комплекта летних шин Continental, каждый имеет шанс выиграть поездку...
