--- a/app/blocks/popular-cars/popular-cars.styl
+++ b/app/blocks/popular-cars/popular-cars.styl
@@ -21,6 +21,12 @@
 
 	&__carousel
 		border 1px solid #e9e9e9
+		
+		+rmin($md)
+		
+			margin-left 4px
+			margin-right 6px
+			
 
 	&__link
 		position relative
