--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -102,8 +102,8 @@
 		
 		+rmin($md)
 			position absolute
-			top calc(50% - 10px)
-			right -174px
+			top calc(50% - 5px)
+			right -158px
 			margin-top 0
 			transform translateY(-50%)
 			
@@ -132,7 +132,8 @@
 		box-shadow none
 		
 		+rmin($md)
-			margin-top -20px
+			margin-top -10px
+			margin-right 7px
 			margin-left auto
 			padding-left 30px
 			padding-right 30px
