--- a/app/blocks/news/news.styl
+++ b/app/blocks/news/news.styl
@@ -44,6 +44,9 @@
 		
 	&__button-w
 		text-align center
+		
+		+rmin($md)
+			margin-top 10px
 
 	&__button
 		padding-top 16px
@@ -55,6 +58,12 @@
 		font-weight 500
 		text-transform none
 		letter-spacing 0
+		
+		+rmin($md)
+			padding-top 19px
+			padding-left 26px
+			padding-right 23px
+			font-size 14px
 
 	&__arrow 
 		resetbutton()
