--- a/app/blocks/popular-sizes/popular-sizes.styl
+++ b/app/blocks/popular-sizes/popular-sizes.styl
@@ -6,7 +6,7 @@
 		
 		+rmin($md)
 			padding-top 40px
-			padding-bottom 40px
+			padding-bottom 30px
 
 	&__col
 		position relative
@@ -20,6 +20,8 @@
 		overflow hidden
 		
 		+rmin($md)
+			margin-left 4px
+			margin-right 6px
 			max-height 100%
 			
 	&__list_full
@@ -33,7 +35,8 @@
 		box-shadow 0 2px 5px rgba(64, 76, 84, 0.06)
 		
 		+rmin($md)
-			padding-bottom 10px
+			margin-bottom 11px
+			padding-bottom 3px
 			display flex
 			
 		+rmin($lg)
@@ -68,7 +71,7 @@
 		margin-right 5px
 		border 1px solid #dbdddf
 		padding-top 8px
-		padding-right 8px
+		padding-right 7px
 		padding-bottom 6px
 		padding-left 8px
 		height 30px
@@ -83,6 +86,9 @@
 		border-radius 4px
 		tr(all .3s ease)
 		
+		+rmin($md)
+			margin-bottom 8px
+
 		+rmin($lg) 
 			padding-left 8px
 			padding-right 7px
@@ -149,7 +155,7 @@
 		
 		+rmin($md)
 			position absolute
-			top 86px
-			right 30px
+			top 80px
+			right 51px
 		
 
