--- a/app/blocks/popup/popup.styl
+++ b/app/blocks/popup/popup.styl
@@ -1,11 +1,11 @@
 .popup
 	position relative
-	margin auto
+	margin 60px auto 0
 	padding-top 20px
-	padding-left 30px
-	padding-right 30px
+	padding-left 18px
+	padding-right 20px
 	padding-bottom 40px
-	max-width 540px
+	max-width 300px
 	background #FFF 
 	&__title
 		margin-bottom 20px
@@ -14,5 +14,13 @@
 
 	// &__tabs
 		
+
+	.tabs__link
+		
+		padding-bottom 15px
+	
+
 	.mfp-close
+		top 3px
+		right -3px
 		color #8B9095
