--- a/app/blocks/text/text.styl
+++ b/app/blocks/text/text.styl
@@ -4,7 +4,7 @@
 		padding-bottom 18px
 		
 		+rmin($md)
-			padding-top 40px
+			padding-top 44px
 			
 	&__col 
 		display flex
@@ -14,12 +14,14 @@
 		display none
 		
 		+rmin($md)
-			display block
+			margin-top -3px
+			margin-left 3px
 			margin-right 30px
 			flex-shrink 0
 			flex-grow 1
 			flex-basis 155px
 			max-width 265px
+			display block
 		
 		+rmin($lg)
 			flex-basis 265px
