--- a/app/blocks/banner/banner.styl
+++ b/app/blocks/banner/banner.styl
@@ -12,7 +12,7 @@
 			
 		+rmin($lg)
 			padding-top 50px
-			padding-bottom 50px
+			padding-bottom 32px
 		
 	&__slider
 		position relative
@@ -24,6 +24,10 @@
 			margin-right 6px
 
 			height 416px
+			
+		+rmin($lg)
+			margin-right -2px
+			margin-left 0
 		
 		.slick-list
 			height 100%
