--- a/app/blocks/brands/brands.styl
+++ b/app/blocks/brands/brands.styl
@@ -12,7 +12,7 @@
 		
 		+rmin($lg)
 			padding-top 50px
-			padding-bottom 30px
+			padding-bottom 26px
 
 	&__title
 		padding-right 99px
@@ -22,6 +22,9 @@
 			margin-left 5px
 			font-size 24px
 
+		+rmin($lg)
+			margin-left 1px
+	
 		
 	&__brand
 		position relative
@@ -39,7 +42,7 @@
 		+rmin($lg)
 			padding-left 15px
 			padding-right 15px
-			height 120px
+			height 132px
 			
 		// &:after
 		// 	position absolute
@@ -94,7 +97,11 @@
 			margin-top 30px
 
 		+rmin($md)
-			margin-top 30px
+			margin-top 20px
+			
+		+rmin($lg)
+			margin-right -14px
+			margin-left -14px
 
 	&__list-nav
 		position absolute
@@ -106,6 +113,10 @@
 		+rmin($md)
 			top 10px
 			right 20px
+			
+		+rmin($lg)
+			top 46px
+			right 17px
 
 	&__arrow 
 		resetbutton()
