--- a/app/blocks/contacts/contacts.styl
+++ b/app/blocks/contacts/contacts.styl
@@ -79,6 +79,9 @@
 		+rmin($md)
 			margin-bottom 20px
 			width 100%
+			
+		+rmin($lg)
+			margin-bottom 24px
 		
 	.contacts__w
 		+rmin($md)
@@ -109,7 +112,7 @@
 			
 		+rmin($lg)
 			position static
-			margin-top 20px
+			margin-top 28px
 			display block
 			
 		
@@ -140,7 +143,8 @@
 			font-size 16px
 		
 		+rmin($lg)
-			margin-top 20px
+			margin-top 8px
 			margin-left 0
+			margin-right 0
 	
 		
