--- a/app/blocks/head/head.jade
+++ b/app/blocks/head/head.jade
@@ -24,5 +24,7 @@ head
 	meta(name='description' content=pageDescription || '')
 	meta(name='keywords' content=pageKeywords || '')
 
+	link(href='assets/styles/bootstrap.min.css' rel='stylesheet')
 	link(href='assets/styles/bootstrap-grid.min.css' rel='stylesheet')
+	
 	link(href='assets/styles/app.min.css' rel='stylesheet')
