--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -44,8 +44,8 @@
 			flex-wrap wrap
 			
 		+rmin($lg)
-			padding-left 20px
-			padding-right 20px
+			padding-left 7px
+			padding-right 15px
 		
 	&__logo
 		// margin-top 14px
@@ -70,7 +70,8 @@
 			margin-left 0
 			max-width 210px
 			
-		+rmin($xl)
+		+rmin($lg)
+			margin-right 39px
 			max-width 245px
 	
 	&__search
@@ -84,6 +85,8 @@
 			height 44px
 			
 		+rmin($lg)
+			margin-top -1px
+			margin-right 32px
 			max-width 400px
 		
 	&__social
@@ -100,6 +103,9 @@
 			margin-left auto
 			margin-right 10px
 			display block
+		
+		+rmin($lg)
+			margin-top -4px
 			
 
 	&__w
