--- a/app/blocks/popular-cars/popular-cars.styl
+++ b/app/blocks/popular-cars/popular-cars.styl
@@ -9,7 +9,7 @@
 			padding-bottom 40px
 			
 		+rmin($lg)
-			padding-top 50px
+			padding-top 55px
 			padding-bottom 50px
 		
 	&__title
@@ -18,6 +18,7 @@
 		
 		+rmin($lg)
 			margin-bottom 30px
+			padding-left 1px
 
 	&__carousel
 		border 1px solid #e9e9e9
@@ -26,6 +27,10 @@
 		
 			margin-left 4px
 			margin-right 6px
+			
+		+rmin($lg)
+			margin-left 1px
+			margin-right -1px
 			
 
 	&__link
