--- a/app/blocks/text/text.styl
+++ b/app/blocks/text/text.styl
@@ -4,7 +4,11 @@
 		padding-bottom 18px
 		
 		+rmin($md)
-			padding-top 44px
+			padding-top 40px
+		
+		+rmin($lg)
+			padding-top 51px
+			padding-bottom 49px
 			
 	&__col 
 		display flex
@@ -24,6 +28,7 @@
 			display block
 		
 		+rmin($lg)
+			margin-right 59px
 			flex-basis 265px
 			
 			
