--- a/app/blocks/article/article.styl
+++ b/app/blocks/article/article.styl
@@ -29,16 +29,19 @@
 		
 	&__image
 		margin auto
-		
-		+rmin($md)
-			min-height 160px
-			overflow hidden
+		margin-top 0
+		max-height 160px
+		overflow hidden 
+		// +rmin($md)
+		// 	min-height 160px
+		// 	overflow hidden
 		
 	&__w
 		padding 20px
-		height 100%
+		// height 100%
 		display flex
 		flex-direction column
+		flex-grow 1
 		
 	&__title
 		margin-bottom 15px
@@ -50,8 +53,11 @@
 		tr(all .3s ease)
 		
 	&__text
+		max-height 63px
+		overflow hidden
 		color #666666
 		line-height 1.571
+		
 
 	&__meta
 		margin-top auto
