--- a/app/blocks/featured/featured.styl
+++ b/app/blocks/featured/featured.styl
@@ -33,13 +33,14 @@
 				right 21px
 				
 			+rmin($lg)
-				top 54px
+				top 53px
+				right 15px
 				
 	&__list
 		
-		// +rmin($md)
-		// 	margin-left 3px
-		// 	margin-right 2px
+		+rmin($lg)
+			margin-left -15px
+			margin-right -15px
 		
 	&__nav
 		margin-left -20px
