--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -65,6 +65,10 @@
 			
 	&__row_buttons_compute
 		margin-top 0
+		
+		+rmin($md)
+			margin-top -9px
+
 		.form__col
 			width 46%
 
@@ -134,7 +138,7 @@
 				border-radius 0 0 0 0
 				
 			+rmin($lg)
-				width 48px
+				width 46px
 				
 		.form__drop-icon
 			top 50%
@@ -162,6 +166,9 @@
 		&.form__field_hide
 			+rmin($md)
 				display flex
+			
+			+rmin($lg)
+				display none
 
 		.selectize-control
 			width 100%
@@ -257,7 +264,8 @@
 			white-space nowrap
 			
 			+rmin($lg)
-				padding-left 22px
+				padding-left 27px
+				font-size 12px
 
 	
 	&__field_buttons
@@ -269,8 +277,7 @@
 		border-radius 4px 4px / 4px 4px
 		
 		+rmin($lg)
-			margin-top 20px
-			margin-top 30px
+			margin-top 27px
 			display flex
 			justify-content space-between
 			
@@ -290,9 +297,24 @@
 		font-weight 400
 		font-size 14px
 		line-height 40px
-		overflow hidden
+		// overflow hidden
 		border-radius 4px
 		
+		// +rmin($lg)
+		// 	padding-left 0
+		// 	padding-right 0
+		
+		&.selectize-control
+			border none
+			padding-left 0
+			padding-right 0
+
+		&.selectize-dropdown
+			padding-left 0
+			padding-right 0
+			+rmin($lg)
+				height auto
+
 	&__button
 		resetbutton()
 		margin-left -1px
@@ -357,7 +379,7 @@
 		
 	&__label_out
 		position absolute
-		top calc(-100% + 18px)
+		top calc(-100% + 13px)
 		left 0
 		display none
 		width 100%
@@ -468,6 +490,15 @@
 			background-color #268ae1
 			height 44px
 			
+		+rmin($lg)
+			padding-right 17px  
+			padding-left 24px
+			width 136px
+			color #FFF 
+			font-size 16px
+			text-indent 0
+			text-align right
+			
 	&__submit-icon
 		position absolute
 		top 50%
@@ -481,6 +512,10 @@
 			width 16px
 			height 16px
 			fill #fff
+			
+		+rmin($lg)
+			top calc(50% - 1px)
+			left 26px
 
 	&__note 
 		margin-top 12px
@@ -509,6 +544,10 @@
 
 	&__button_1
 		margin-right 8px
+		
+		+rmin($lg)
+			margin-right 10px
+		
 
 	
 
@@ -533,7 +572,7 @@
 		border-radius 4px
 		box-shadow 0 4px 8px rgba(38, 138, 225, 0.15)
 		background #268AE1
-		
+		text-align center
 		&:hover
 			background darken(#268AE1, 10)
 
@@ -561,6 +600,10 @@
 		
 		+rmin($md)
 			max-width 120px
+			
+		+rmin($lg)
+			max-width 129px
+			text-align center
 
 	.form__submit
 		width auto
@@ -573,6 +616,15 @@
 		text-indent 0
 		letter-spacing 0.96px
 		line-height 1
+		
+		+rmin($lg)
+			margin-right 21px
+			padding-top 10px
+			padding-left 14px
+			padding-right 10px
+			font-size 13px 
+			text-transform capitalize
+
 		&:hover
 			box-shadow 0 4px 8px rgba(38, 138, 225, 0.15)
 			
