--- a/app/blocks/map/map.styl
+++ b/app/blocks/map/map.styl
@@ -4,6 +4,11 @@
 	height 350px
 	+rmin($md)
 		height 600px
+		
+	+rmin($lg)
+		margin-bottom 0
+
+
 	&__object
 		position absolute
 		top 0
@@ -50,6 +55,10 @@
 			top 40px
 			left 9px
 			display block
+			
+		+rmin($lg)
+			top 50px
+			left 15px
 
 	&__addresses_hide
 		width 10px
@@ -74,7 +83,7 @@
 		&:nth-child(even)
 			background #f5f6f8
 
-	&__close
+	a.map__close
 		resetbutton()
 		position absolute
 		top 0
@@ -100,13 +109,18 @@
 			transform translateY(-50%) rotate(0deg)
 			tr(all .3s ease)
 			
+		&:hover,
+		&:focus
+			color #ffffff
+			
 
 
-	&__close_active
-		left 0
-		&:after
-			transform translateY(-50%) rotate(180deg)
-			tr(all .3s ease)
+		&.map__close_active
+			left 0
+			color #ffffff
+			&:after
+				transform translateY(-50%) rotate(180deg)
+				tr(all .3s ease)
 
 	// &__icon
 	// 	position absolute
