--- a/app/blocks/news/news.styl
+++ b/app/blocks/news/news.styl
@@ -10,7 +10,7 @@
 		
 
 		+rmin($lg)
-			padding-top 50px
+			padding-top 48px
 			padding-bottom 50px
 			
 	&__title
@@ -20,13 +20,18 @@
 			margin-left 5px			
 
 		+rmin($lg)
-			margin-bottom 20px
+			margin-left 1px
+			margin-bottom 28px
 		
 	&__articles
 		position relative
 		
 		margin-left -7px
 		margin-right -2px
+		
+		+rmin($lg)
+			margin-left -16px
+			margin-right -16px
 
 	&__article
 		margin-bottom 30px
@@ -41,12 +46,18 @@
 		
 		+rmin($lg)
 			margin-bottom 40px
+			padding-left 15px
+			padding-right 15px
+			height 362px
 		
 	&__button-w
 		text-align center
 		
 		+rmin($md)
 			margin-top 10px
+
+		+rmin($lg)
+			margin-top 0
 
 	&__button
 		padding-top 16px
@@ -64,6 +75,15 @@
 			padding-left 26px
 			padding-right 23px
 			font-size 14px
+
+		+rmin($lg)
+			padding-top 23px
+			padding-right 36px
+			padding-bottom 14px
+			padding-left 34px
+			height 60px
+			font-size 16px
+
 
 	&__arrow 
 		resetbutton()
