--- a/app/blocks/selection/selection.styl
+++ b/app/blocks/selection/selection.styl
@@ -11,7 +11,7 @@
 			padding-bottom 41px
 			
 		+rmin($lg)
-			padding-top 50px
+			padding-top 39px
 			padding-bottom 50px	
 		
 	// &__row
@@ -38,6 +38,9 @@
 			
 			+rmin($md)
 				margin-left 4px
+				
+			+rmin($lg)
+				margin-bottom 20px
 		
 	&__title	
 		margin-bottom 6px
@@ -128,6 +131,11 @@
 				margin-left 4px
 				margin-right 7px
 				padding-bottom 23px
+				
+			+rmin($lg)
+				margin-left 0
+				margin-right -1px
+				height 340px
 		
 		.selection__block_inner
 			padding-top 18px
@@ -147,11 +155,17 @@
 			+rmin($md)
 				margin-bottom 10px
 				width 32.2%
+				
+			+rmin($lg)
+				margin-bottom 20px
 			
 		.form__field_select
 			
 			+rmin($md)
 				max-width 200px
+				
+			+rmin($lg)
+				margin-bottom 0
 			
 		.form__row_select
 			.form__col
@@ -179,6 +193,7 @@
 				width 104%
 			
 			+rmin($lg)
+				margin-top 11px
 				margin-right -10px
 				justify-content space-between
 				
@@ -189,6 +204,7 @@
 					width auto
 					
 				+rmin($lg)
+					margin-bottom 10px
 					width auto
 					width 50%
 			
@@ -198,6 +214,9 @@
 					
 					+rmin($md)
 						font-size 14px
+						
+					+rmin($lg)
+						font-size 12px
 						
 					&:after,
 					&:before
@@ -210,6 +229,20 @@
 			+rmin($md)
 				margin-bottom 0
 				
+			
+			&:nth-child(1)
+
+				+rmin($lg)
+					width 180px
+
+			&:nth-child(2)
+
+				+rmin($lg)
+					width 120px
+
+				
+
+				
 		.form__row_buttons_compute
 			
 			.form__submit,				
@@ -217,6 +250,17 @@
 				
 				+rmin($md)
 					max-width 141px
+					
+				+rmin($lg)
+					max-width 142px
+					
+
+			.form__submit
+				
+				+rmin($lg)
+					margin-right 10px
+
+
 				
 			.form__reset
 				
@@ -256,6 +300,10 @@
 		+rmin($md)
 			margin-left -6px
 			margin-bottom 10px
+			
+		+rmin($lg)
+			margin-left -9px
+			margin-bottom 20px
 
 	.selection__image
 		position absolute
@@ -301,21 +349,23 @@
 			right 11px
 
 		+rmin($lg)
-			bottom 30px
+			right -1px
 			bottom 1px
 	
 	.selection__filter
 		
 		+rmin($lg)
 			margin-top 58px
-			height 312px
+			margin-right -16px
+			margin-left -11px
+			height 314px
 	
 	.tabs__nav
 		
 		+rmin($lg)
 			position absolute
-			top -37px
-			left 0
+			top 46px
+			left 5px
 			right 0
 			border-radius 6px 6px 0 0  
 			
@@ -369,6 +419,8 @@
 			
 			+rmin($lg)
 				border none
+				padding-top 13px
+				padding-left 9px
 				padding-bottom 10px
 				background #EAEAEA
 
@@ -383,9 +435,10 @@
 	.selection__block_inner
 		
 		+rmin($lg)
-			padding-top 57px
-			padding-top 40px
-			
+			// padding-top 57px
+			padding-top 65px
+			padding-right 20px
+			padding-left 20px
 		// .tabs__content
 		// 	+rmin($lg)
 		// 		height auto
@@ -400,6 +453,8 @@
 			
 			+rmin($lg)
 				width 100%
+				display block
+				
 				
 	.form__field_select
 				
@@ -444,6 +499,7 @@
 			
 			+rmin($lg)
 				border-bottom 1px dotted #5D5F63
+				padding-bottom 5px
 				display inline-block
 		&:after
 			display none
@@ -473,6 +529,14 @@
 			+rmin($md)
 				max-width 165px
 		
+
+	.selection__filter
+		
+		+rmin($lg)
+			margin-left -8px
+			margin-right -18px
+			height 340px
+
 	.selection__col
 		
 		+rmin($md)
@@ -489,7 +553,7 @@
 			height 109px
 			
 		+rmin($lg)
-			bottom 40px
+			right -1px
 			bottom 1px
 		
 	.selection__block_inner
@@ -499,8 +563,9 @@
 			padding-right 195px
 			
 		+rmin($lg)
-			padding-top 20px
-			padding-right 0
+			padding-top 29px
+			padding-left 18px
+			padding-right 18px
 			
 
 	.form__col
@@ -516,6 +581,9 @@
 		+rmin($md)
 			margin-top 0
 			
+		+rmin($lg)
+			margin-top 4px
+			
 		.form__col
 			
 			+rmin($md)
@@ -530,8 +598,18 @@
 		
 		+rmin($md)
 			margin-bottom 20px
-			
+
+
+		+rmin($lg)
+			margin-bottom 15px
 		
+	.form__submit
+		+rmin($lg)
+			margin-right 10px
+			padding-right 15px
+			padding-left 15px
+			max-width 120px
+
 
 	.form__reset
 		
@@ -552,4 +630,6 @@
 		
 		+rmin($md)
 			margin-top 13px
+		
+
 		
