--- a/app/styles/helpers/common.styl
+++ b/app/styles/helpers/common.styl
@@ -16,6 +16,9 @@
 		// flex 0 1 auto
 		flex 1 0 auto
 		
+	a
+		text-decoration none
+		
 	&__nav-bg
 		position absolute
 		content "" 
@@ -87,6 +90,8 @@
 		font-size 18px
 		line-height 1.555 
 	
+
+
 
 img
 	max-width 100%
@@ -191,6 +196,9 @@ img
 		
 		+rmin($md)
 			font-size 24px
+			
+		+rmin($lg)
+			margin-bottom 22px
 		
 	// h3
 	// 	margin-top 60px
